--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 *{
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: white;
+
 }
 
 body{
@@ -18,27 +20,35 @@ form{
   background-color: #807f85;
   border-radius: 20px;
   padding: 10px;
+  max-width: 20rem;
+  width: 100%;
+
 }
 
 label{
   display: flex;
   flex-direction: column; 
+  padding-top: 10px;
 }
 
 input[type= "submit"]{
   padding: 10px;
-  color: white;
   font-weight: bold;
   background-color: #bcb7b2;
   border: 0px;
   border-radius: 10px;
 }
 
+input[type= "submit"]:hover{
+  background-color: bisque;
+  transition: 1s;
+}
+
 input, textarea{
   outline: none;
   background-color: #807f85;
   border: 0px;
-  border-bottom: 2px solid black;
+  border-bottom: 2px solid white;
 
 }
 
@@ -53,7 +63,8 @@ input, textarea{
   padding: 20px;
   border-radius: 20px;
   text-align: center;
-  max-width: 40rem;
+  max-width: 20rem;
+  width: 100%;
   animation: girar 1.5s ease-out;
 }
 
@@ -66,7 +77,7 @@ input, textarea{
 }
 
 #info p{
-  border-bottom: 2px solid black;
+  border-bottom: 2px solid white;
   color: white;
 }
 
