--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,17 @@
 *{
+  margin: 0;
+  padding: 0;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   color: white;
 
 }
 
 body{
-  background: url("/fondoformulario.svg") center/cover no-repeat ;
+  background: url("/fondoformulario.svg") center/cover no-repeat fixed;
 }
 
 #root{
-  height: 90vh;
+  min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -49,6 +51,7 @@ input, textarea{
   background-color: #807f85;
   border: 0px;
   border-bottom: 2px solid white;
+  resize: vertical;
 
 }
 
